# bounty_hunter_mw2

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bounty_hunter_mw2/: __init__.py  bot.py  config.py
src/bounty_hunter_mw2/cogs/: bot_request.py  general.py  owner.py  test.py
src/bounty_hunter_mw2/database/: models.py
src/bounty_hunter_mw2/exceptions/: __init__.py
src/bounty_hunter_mw2/helpers/: checks.py
tests/: test_bounty_hunter_mw2.py
