[tool.poetry]
name = "bounty_hunter_mw2"
version = "0.1.0"
description = "A discord bot for tracking and reporting cheaters. "
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
